--- a/Midterm_Exam.ipynb
+++ b/Midterm_Exam.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOekEuInfcSVTprCKmQGILn",
+      "authorship_tag": "ABX9TyPy5EfVqI4kVLOdU9xGzgQ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,41 +47,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OHGdY5aR-bBD",
-        "outputId": "b07cc741-2e0c-49aa-82f2-041ee9fa6069"
+        "outputId": "3a3a5a9d-aa1c-4de9-ca6c-488b66582fde"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n",
-            "10\n",
-            "Sum of accessed individual element through indexes:\n",
-            "55\n"
+            "0 8\n",
+            "1 18\n",
+            "2 28\n",
+            "3 38\n",
+            "4 48\n",
+            "5 58\n",
+            "6 68\n",
+            "7 78\n",
+            "8 88\n",
+            "9 98\n",
+            "530\n"
           ]
         }
       ],
       "source": [
-        "from array import *\n",
-        "a = array('i', [1,2,3,4,5,6,7,8,9,10])\n",
-        "for i in a:\n",
-        "    print(i)\n",
-        "print(\"Sum of accessed individual element through indexes:\")\n",
-        "print(a[0]+a[1]+a[2]+a[3]+a[4]+a[5]+a[6]+a[7]+a[8]+a[9])"
+        "num = [8,18,28,38,48,58,68,78,88,98] #1\n",
+        "for index, val in enumerate(num):\n",
+        "  print(index,val)\n",
+        "print(sum(num))"
       ]
     },
     {
@@ -97,7 +94,7 @@
     {
       "cell_type": "code",
       "source": [
-        "numbers  = [1,2,3,4,5,6,7,8,9,10]\n",
+        "numbers  = [1,2,3,4,5,6,7,8,9,10] #2\n",
         "numbers.append(11)\n",
         "print(numbers)"
       ],
@@ -132,7 +129,7 @@
     {
       "cell_type": "code",
       "source": [
-        "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10] #3\n",
         "numbers.insert(9,9.5)\n",
         "print(numbers)"
       ],
@@ -167,8 +164,7 @@
     {
       "cell_type": "code",
       "source": [
-        "numbers = [1, 2, 3, 4, 5]\n",
-        "numbers.reverse()\n",
+        "numbers = [1, 2, 3, 4, 5] #4\n",
         "print(numbers)"
       ],
       "metadata": {
@@ -203,7 +199,7 @@
     {
       "cell_type": "code",
       "source": [
-        "A = [1,2,3,4,5,6,7,8,8,9,10]                    \n",
+        "A = [1,2,3,4,5,6,7,8,8,9,10] #5                   \n",
         "N = len(A)                                           \n",
         "\n",
         "def dupe(A, N):\n",
