--- a/Stack_and_Queues.ipynb
+++ b/Stack_and_Queues.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTeToEsHfF0vtWUb2QYsa8",
+      "authorship_tag": "ABX9TyNLV7zg8JAFMacpkHgHOMlM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
         }
       ],
       "source": [
-        "class Stack:\n",
+        "class Stack:            #LIFO\n",
         "  def __init__(self):\n",
         "    self.stack = []        #stack implementation using OOP concepts\n",
         "\n",
@@ -70,6 +70,42 @@
         "AStack.pop()\n",
         "AStack.pop()\n",
         "print(AStack.stack)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Implement by Queues (enqueue and dequeue/FIFO)\n"
+      ],
+      "metadata": {
+        "id": "-AiFYvzuiFhg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Array = [1,2,3]\n",
+        "Array.pop()\n",
+        "print(Array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ddChV7Quik0H",
+        "outputId": "f23c4013-cfa0-4f96-c2f8-ac8d3a7e2a50"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2]\n"
+          ]
+        }
       ]
     }
   ]
