--- a/Stack_and_Queues.ipynb
+++ b/Stack_and_Queues.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLV7zg8JAFMacpkHgHOMlM",
+      "authorship_tag": "ABX9TyOOMx9qDYP6UvfkevYljpgc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,35 +75,56 @@
     {
       "cell_type": "code",
       "source": [
-        "#Implement by Queues (enqueue and dequeue/FIFO)\n"
-      ],
-      "metadata": {
-        "id": "-AiFYvzuiFhg"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "Array = [1,2,3]\n",
-        "Array.pop()\n",
-        "print(Array)"
+        "#Application 1\n",
+        "#Implement the above profram by Queues and Data Structure (enqueue and dequeue/FIFO)\n",
+        "class Queues:           \n",
+        "  def __init__(self):\n",
+        "    self.queues = []        \n",
+        "  def push(self,dataval):\n",
+        "    if dataval not in self.queues:\n",
+        "      return self.queues.append(dataval)\n",
+        "    else: \n",
+        "      return False\n",
+        "  def pop(self):\n",
+        "    if len(self.queues)<=0:\n",
+        "      return (\"No element in the stock\")\n",
+        "    else:\n",
+        "      return self.queues.pop(0)\n",
+        "\n",
+        "AQueue = Queues()\n",
+        "AQueue.push(\"A\")\n",
+        "AQueue.push(\"B\")\n",
+        "AQueue.push(\"C\")\n",
+        "AQueue.push(\"D\")\n",
+        "AQueue.push(\"E\")\n",
+        "AQueue.push(\"F\")\n",
+        "AQueue.push(\"G\")\n",
+        "AQueue.push(\"H\")\n",
+        "AQueue.push(\"I\")\n",
+        "AQueue.push(\"J\")\n",
+        "print(AQueue.queues)\n",
+        "AQueue.pop()\n",
+        "AQueue.pop()\n",
+        "AQueue.pop()\n",
+        "AQueue.pop()\n",
+        "AQueue.pop()\n",
+        "print(AQueue.queues)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ddChV7Quik0H",
-        "outputId": "f23c4013-cfa0-4f96-c2f8-ac8d3a7e2a50"
+        "id": "-AiFYvzuiFhg",
+        "outputId": "d63965bd-3ca6-4356-b75e-f6bad0ff8fda"
       },
-      "execution_count": 9,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1, 2]\n"
+            "['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J']\n",
+            "['F', 'G', 'H', 'I', 'J']\n"
           ]
         }
       ]
